	* fs/fs_syslog.c: Can't handle SYSLOG output to character device from
	  the IDLE task (because it can't block). syslog_putc now returns EOF
	  on failure and sets errno.  Fixed some errors in error handling.
	* libc/stdio/lib_syslogstream.c:  Checking of return value from
	  syslog_putc was bogus.  Switching to EOF for all errors solves
	  this.
	* arch/arm/src/lm/chip/lm4f_memorymap.h: More LM4F changes from
	  Jose Pablo Carballo.
	* drivers/serial/serial.c, include/nuttx/serial/serial.h,
	  drivers/usbdev/cdcacm.c, and drivers/pl2303.c: Add support for
	  removable serial devices (like USB serial).  This support is enabled
	  by CONFIG_SERIAL_REMOVABLE.
	* arch/*/src/*/Toolchain.defs: Change assignment so that we can
	  override CROSSDEV with a make command line argument.
	* include/assert.h:  Mark assertion functions as non-returning.
	* arch/*/src/*/up_assert.h:  Mark _up_assert() as non-returning.
	* drivers/mtd/at25.c: When the AT25 device was not available the
	  initialization did not fail like it should. From Petteri Aimonen.
	* fs/fat/fs_configfat.c:  Fix some errors in FAT formatting logic
	  for large devices and for FAT32. From Petteri Aimonen.
	* fs/fat/fs_fat32util.c:  Fix an initialization error found by
	  Petteri Aimonen.  freecount and next freecount initialization were
	  reversed.
	* drivers/mmcsd/mmcsd_spi.c: Some SD cards will appear busy until
	  switched to SPI mode for first time.  Having a pull-up resistor on
	  MISO may avoid this problem, but this patch makes it work also
	  without pull-up.  From Petteri Aimonen.
	* fs/fat/fs_fat32.c: Fix a compilation error when FAT_DMAMEMORY=y. 
	  From Petteri Aimonen.
	* arch/arm/src/stm32/chip/stm32_spi.h: STM32F4 max SPI clock freq is
	  37.5 MHz.  Patch from Petteri Aimonen.
	* arch/arm/src/stm32/stm32_spi.c: Fixes for SPI DMA work on the
	  STM32F4. Includes untested additions for the F1 implementation as
	  well.  From Petteri Aimonen.

6.26 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>